--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -39,3 +39,11 @@ img {
     width: 85px;
     height: 50px;
 }
+
+@media screen and (max-width: 768px) {
+
+    .clientBox{
+        flex-wrap: wrap;
+    }
+  
+  }
