--- a/src/components/FAQa/FAQs.css
+++ b/src/components/FAQa/FAQs.css
@@ -27,6 +27,9 @@
 }
 
 .accordian{
+  max-width: 45%;
+  margin: 0 auto;
+
   background-color: #fff;
   border-radius: 4px;
   margin-bottom: 30px;
@@ -34,4 +37,21 @@
   -webkit-box-shadow: 0 4px 25px -10px rgba(0,22,89,.2);
   -moz-box-shadow: 0 4px 25px -10px rgba(0,22,89,.2);
   font-size: 18px;
+}
+
+@media screen and (max-width: 1000px) {
+  .accordian {
+    max-width: 80%;
+    margin: 0 auto;
+  margin-bottom: 30px;
+
+}
+}
+@media screen and (max-width: 600px) {
+  .accordian {
+    max-width: 90%;
+    margin: 0 auto;
+  margin-bottom: 20px;
+
+}
 }
