--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -61,6 +61,16 @@ nav{
 }
 
 
+
+
+
+@media screen and (max-width: 1000px) {
+   .navContainer{
+    max-width: 85vw;
+   }
+}
+
+
 @media screen and (max-width: 768px) {
     .navContainer{
         max-width: 90%;
@@ -77,7 +87,7 @@ nav{
         left: 0;
         bottom : 0px;
         width: 100%;
-        background: red;
+        background: white;
         align-items: start;
         flex-direction: column;
         padding: 1px;
