--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  overflow-x: hidden !important;
+}
 
 @layer components{
     .accordion-header{
