--- a/src/pages/offer.css
+++ b/src/pages/offer.css
@@ -61,8 +61,7 @@
   text-align: center;
   font-size: 14px;
 }
-
-.listBox .boxButton {
+.boxButton {
   position: absolute;
   right: 30px;
   bottom: 90px;
@@ -78,7 +77,7 @@
   gap: 10px;
 }
 
-.listBox.selected .boxButton {
+.boxButton.selected {
   position: absolute;
   right: 30px;
   bottom: 90px;
@@ -125,6 +124,7 @@
   gap: 10px;
 }
 
+
 .innerBtn {
   position: absolute;
   right: -100px;
@@ -132,8 +132,8 @@
   display: flex;
   background: gray;
   align-items: center;
-  font-size: 14px;
-  padding: 5px 10px;
+  font-size: 12px;
+  padding: 8px 10px;
   background: white;
   color: #333;
 }
@@ -319,37 +319,13 @@
     width: 98%;
   }
   .listBoxes {
-    width: 90% !important;
+    width: 80% !important;
   }
   .listBox {
     height: 450px;
     position: relative;
   }
 
-  .listBox .boxButton {
-    width: 95%;
-    right: 2.5%;
-  }
-  .listBox.selected .boxButton {
-    width: 95%;
-    right: 2.5%;
-  }
-  .boxButton {
-    width: 95%;
-    right: 2.5%;
-  }
-  .boxButton.selected {
-    width: 95%;
-    right: 2.5%;
-  }
-  .boxButton {
-    width: 95%;
-    right: 2.5%;
-  }
-  .boxButton.selected {
-    width: 95%;
-    right: 2.5%;
-  }
 
   .listImg {
     width: 100%;
@@ -364,8 +340,26 @@
   .listFlex {
     flex-direction: column;
   }
+
 }
 
+@media screen and (max-width: 1000px) {
+  .boxButton {
+    width: 95%;
+    right: 2.5%;
+  }
+ .boxButton.selected {
+    width: 95%;
+    right: 2.5%;
+  }
+  .boxButton {
+    width: 95%;
+    right: 2.5%;
+  }
+  .innerBtn{
+    display: none;
+  }
+}
 @media screen and (max-width: 800px) {
   .listBox {
     height: 410px;
@@ -498,5 +492,68 @@
   
   .listContent .ul > div svg {
     fill: #45b29b;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .listBoxes .listBox:nth-child(1){
+    max-height: 400px;
+  }
+  .listBoxes .listBox:nth-child(2){
+    min-height: 430px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(3){
+    min-height: 350px;
+    max-height: 385px;
+  }
+  .listBoxes .listBox:nth-child(4){
+    min-height: 470px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(5){
+    min-height: 415px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(6){
+    min-height: 435px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(7){
+    min-height: 450px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(8){
+    min-height: 495px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(9){
+    min-height: 390px;
+    max-height: 400px;
+  }
+  .listBoxes .listBox:nth-child(10){
+    min-height: 495px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(11){
+    min-height: 495px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(12){
+    min-height: 420px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(13){
+    min-height: 450px;
+    max-height: 450px;
+  }
+  .listBoxes .listBox:nth-child(14){
+    min-height: 430px;
+    max-height: 450px;
+  }
+  .final button{
+    font-size: 24px;
+    padding: 15px
   }
 }
