--- a/src/pages/offer.css
+++ b/src/pages/offer.css
@@ -504,8 +504,11 @@
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(3){
-    min-height: 350px;
+    min-height: 420px;
     max-height: 385px;
+  }
+  .listBoxes .listBox:nth-child(3) .boxButton{
+    margin-bottom: 20px;
   }
   .listBoxes .listBox:nth-child(4){
     min-height: 470px;
@@ -516,11 +519,11 @@
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(6){
-    min-height: 435px;
+    min-height: 465px;
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(7){
-    min-height: 450px;
+    min-height: 420px;
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(8){
@@ -536,11 +539,11 @@
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(11){
-    min-height: 495px;
+    min-height: 520px;
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(12){
-    min-height: 420px;
+    min-height: 450px;
     max-height: 450px;
   }
   .listBoxes .listBox:nth-child(13){
