--- a/src/pages/offer.css
+++ b/src/pages/offer.css
@@ -282,6 +282,85 @@
   font-weight: 600;
 }
 
+.popup {
+  position: fixed;
+  top: 0;
+  z-index: 5000;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-50%);
+  width: 600px;
+  padding: 30px;
+  background: #fff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+
+.close{
+  top: 10px ;
+  right: 10px;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+
+
+.popup > p {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.formBox {
+  width: 100%;
+}
+
+.formBox h3{
+  margin-bottom: 10px;
+  color: #5f5f5f;
+}
+
+.formBox h3 span{
+  color: #45b29b;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.inputs input {
+  padding: 18px 10px;
+  border: 2px solid #a0a0a0;
+  width: 100%;
+}
+
+.inputs button {
+  width: 100%;
+  padding: 18px 10px;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.inputs .findAddress {
+  background: #3c3e3d;
+}
+
+.inputs .continue {
+  background: #e10805;
+}
+
 @media screen and (max-width: 1800px) {
   .offerHero {
     height: 40vh;
@@ -353,6 +432,10 @@
   }
 }
 @media screen and (max-width: 800px) {
+  
+.popup {
+  width: 90%;
+}
   .listBox {
     padding: 10px;
   }
