--- a/src/pages/offer.css
+++ b/src/pages/offer.css
@@ -44,6 +44,20 @@
   gap: 20px;
 }
 
+.transparent{
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2000;
+}
+
+.none{
+  display: none !important;
+}
+
 .listBox {
   background: #fff;
   box-shadow: 0 1px 6px 0 rgba(117, 117, 117, 0.25);
@@ -62,6 +76,7 @@
   font-size: 14px;
 }
 .boxButton {
+  z-index: 1000000;
   position: absolute;
   right: 30px;
   bottom: 90px;
@@ -77,21 +92,6 @@
   gap: 10px;
 }
 
-.boxButton.selected {
-  position: absolute;
-  right: 30px;
-  bottom: 90px;
-  background: #5cbf2a;
-  width: 320px;
-  height: 70px;
-  border-radius: 5px;
-  font-size: 20px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
 
 .boxButton.selected {
   position: absolute;
@@ -419,7 +419,22 @@
   }
 }
 @media screen and (max-width: 800px) {
-  
+  .listImg {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .review{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -10px;
+  }
+  .listBoxes{
+    min-width: 93%;
+  }
 .popup {
   width: 90%;
 }
@@ -437,6 +452,7 @@
 }
 
 @media screen and (max-width: 600px) {
+
   .offerHero {
     background-image: none;
     background: #4ca796;
@@ -465,13 +481,6 @@
     min-width: 95%;
     margin: 0 auto 0px;
     margin-left: 8px;
-  }
-  .listImg {
-    flex-direction: column;
-    align-items: center;
-    gap: 0;
-    justify-content: center;
-    margin-bottom: 10px;
   }
   .boxButton {
     bottom: 20%;
