--- a/src/pages/offer.css
+++ b/src/pages/offer.css
@@ -44,17 +44,17 @@
   gap: 20px;
 }
 
-.transparent{
+.transparent {
   width: 100%;
   height: 100%;
   background: transparent;
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 2000;
+  z-index: 40000;
 }
 
-.none{
+.none {
   display: none !important;
 }
 
@@ -76,7 +76,7 @@
   font-size: 14px;
 }
 .boxButton {
-  z-index: 1000000;
+  z-index: 3000;
   position: absolute;
   right: 30px;
   bottom: 90px;
@@ -91,7 +91,6 @@
   justify-content: center;
   gap: 10px;
 }
-
 
 .boxButton.selected {
   position: absolute;
@@ -270,22 +269,22 @@
 .popup {
   position: fixed;
   top: 0;
-  z-index: 5000;
+  z-index: 60000;
   left: 50%;
   top: 10%;
   transform: translateX(-50%);
   width: 600px;
-  padding: 30px;
+  padding: 17px 30px;
   background: #fff;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
 }
 
-.close{
-  top: 10px ;
+.close {
+  top: 10px;
   right: 10px;
   position: absolute;
   width: 50px;
@@ -297,23 +296,34 @@
   font-size: 20px;
 }
 
-
-
 .popup > p {
   margin-bottom: 20px;
   text-align: center;
+  font-size: 14px;
+  margin-top:25px;
+  position: relative;
+}
+
+.popup > p::before {
+  content: "";
+  position: absolute;
+  top: -21px;
+  left: -35px;
+  width: 112%;
+  height: 1px ;
+  background: #ddd;
 }
 
 .formBox {
   width: 100%;
 }
 
-.formBox h3{
+.formBox h3 {
   margin-bottom: 10px;
   color: #5f5f5f;
 }
 
-.formBox h3 span{
+.formBox h3 span {
   color: #45b29b;
 }
 
@@ -323,6 +333,17 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+.innerInputs {
+  width: 100%;
+  display: flex;
+  gap: 11px;
+}
+
+.innerInputs input,
+.innerInputs button {
+  width: 100%;
 }
 
 .inputs input {
@@ -344,6 +365,10 @@
 
 .inputs .continue {
   background: #e10805;
+  padding: 18px;
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 20px;
 }
 
 @media screen and (max-width: 1800px) {
@@ -354,6 +379,9 @@
 @media screen and (max-width: 1600px) {
   .offerHero {
     height: 40vh;
+  }
+  .listBoxes {
+    width: 80% !important;
   }
 }
 
@@ -378,7 +406,7 @@
     width: 98%;
   }
   .listBoxes {
-    width: 80% !important;
+    width: 85% !important;
   }
   .listBox {
     position: relative;
@@ -426,18 +454,18 @@
     justify-content: center;
     margin-bottom: 10px;
   }
-  .review{
+  .review {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: -10px;
   }
-  .listBoxes{
-    min-width: 93%;
+  .listBoxes {
+    width: 95% !important;
   }
-.popup {
-  width: 90%;
-}
+  .popup {
+    width: 90%;
+  }
   .listBox {
     padding: 10px;
   }
@@ -452,7 +480,6 @@
 }
 
 @media screen and (max-width: 600px) {
-
   .offerHero {
     background-image: none;
     background: #4ca796;
@@ -477,10 +504,9 @@
   .offerHeroContent h2 span {
     font-weight: 600;
   }
-  .listBoxes{
+  .listBoxes {
     min-width: 95%;
     margin: 0 auto 0px;
-    margin-left: 8px;
   }
   .boxButton {
     bottom: 20%;
